[gd_scene load_steps=10 format=3 uid="uid://u127y67yrttt"]

[ext_resource type="Script" path="res://Scripts/sunflower.gd" id="1_2o1af"]
[ext_resource type="Texture2D" uid="uid://6kkd1sau1tm2" path="res://Sprites/sunflower_full_sheet.png" id="1_apbdi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7oanb"]
size = Vector2(16, 14)

[sub_resource type="Animation" id="Animation_3vicq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_mcmoy"]
resource_name = "attack"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 8, 9]
}

[sub_resource type="Animation" id="Animation_mikev"]
resource_name = "come_out"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 5, 4, 3, 2, 1, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"enable_attack_area"
}, {
"args": [],
"method": &"set_play_false"
}]
}

[sub_resource type="Animation" id="Animation_jrv62"]
resource_name = "retract"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"disable_attack_area"
}, {
"args": [],
"method": &"set_play_false"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bpjk5"]
_data = {
"RESET": SubResource("Animation_3vicq"),
"attack": SubResource("Animation_mcmoy"),
"come_out": SubResource("Animation_mikev"),
"retract": SubResource("Animation_jrv62")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8sc8s"]
size = Vector2(16, 16)

[node name="Sunflower" type="CharacterBody2D"]
position = Vector2(0, -8)
script = ExtResource("1_2o1af")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_apbdi")
hframes = 7
vframes = 2
frame = 7

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackAreaCollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_7oanb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bpjk5")
}

[node name="SetStateTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="InitAttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_8sc8s")

[connection signal="timeout" from="SetStateTimer" to="." method="_on_set_state_timeout"]
[connection signal="timeout" from="InitAttackTimer" to="." method="_on_init_attack_timer_timeout"]
